chore: Set minimal JVM config options