@@ -15,11 +15,6 @@ lazy val root = (project in file("."))
     ),
     javaOptions in Universal ++= Seq(
       s"-Dpidfile.path=/dev/null",
-      "-J-XX:MaxRAMFraction=2",
-      "-J-XX:InitialRAMFraction=2",
-      "-J-XX:MaxMetaspaceSize=300m",
-      "-J-XX:+PrintGCDetails",
-      "-J-XX:+PrintGCDateStamps",
       s"-J-Dlogs.home=/var/log/${packageName.value}",
       s"-J-Xloggc:/var/log/${packageName.value}/gc.log",
     ),
